--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "express": "^4.14.0",
     "lodash": "^4.15.0",
     "request": "^2.74.0",
-    "request-promise": "^4.1.1",
+    "request-promise": "^4.1.1"
   },
   "homepage": "https://github.com/TreeHacks/hackpack-chatbot#readme"
 }
